--- a/Devops/test-output/emailable-report.html
+++ b/Devops/test-output/emailable-report.html
@@ -8,11 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Simple Test Suite</th></tr>
-<tr><td><a href="#t0">Login Page</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">15,976</td><td></td><td></td></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,572</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Simple Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login Page &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">DevOps.Devops.AppTest</td><td><a href="#m0">logintoapp</a></td><td rowspan="1">1581591532487</td><td rowspan="1">11470</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">DevOps.Devops.AppTest</td><td><a href="#m0">logintoapp</a></td><td rowspan="1">1581688234927</td><td rowspan="1">28382</td></tr></tbody>
 </table>
-<h2>Login Page</h2><h3 id="m0">DevOps.Devops.AppTest#logintoapp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">DevOps.Devops.AppTest#logintoapp</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
